<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Divine Mercy Alert Service</string>
    <string name="signUp">Sign up</string>
    <string name="login">Login</string>
    <string name="divine_mercy">@string/app_name</string>

    <string name="hint_name">choose a username</string>
    <string name="hint_email">email</string>
    <string name="hint_fname">Firstname</string>
    <string name="hint_lname">Lastname</string>
    <string name="hint_mobile">Mobile number</string>
    <string name="hint_enter_pin">Enter pin here</string>

    <string name="hint_pre">+</string>
    <string name="hint_password">choose a password</string>
    <string name="country_prompt">select country</string>

    <string name="create_account">Create account</string>

    <string name="error_str">Error message here</string>

    <string name="accept_terms">By creating an account, you are agreeing with our terms and conditions</string>

    <string name="forgot_password"><u>forgot password ?</u></string>

    <string name="recovery">Your password will be sent to the provided email address.</string>

    <string name="recover_pswd">Recover password</string>

    <string name="cont_desc_home">Home</string>

    <string name="cont_desc_news">News</string>

    <string name="cont_desc_msg">Daily messages</string>

    <string name="cont_desc_subsc">Subscription</string>

    <string name="cont_desc_settings">Settings</string>

    <string name="widget_list_message">The message goes here</string>
    <string name="widget_list_time">time goes here</string>

    <string name="sub_subscribe">Subscribe</string>
    <string name="sub_stat">Subscription Status</string>
    <string name="sub_type">Subscription Type</string>
    <string name="sub_active">Loading..</string>
    <string name="sub_days">Loading..</string>
    <string name="sub_resubscribe">Enter the 10-digit pin on your scratch card to activate your account</string>

    <string name="contact_phone">Phone: +234 (0) 803 794 9311</string>
    <string name="contact_email">Email: support@dmas-nig.com</string>
    <string name="copyright">copyright 2014 DMAS</string>

    <string name="developer">App by UDcreate \n <u>www.udonline.net</u></string>

</resources>
