<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/bluish_grey"
            xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_gravity="center_vertical"
                  android:gravity="center">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:padding="10dp"
                      android:orientation="vertical">

            <TextView style="@style/textview_normal"
                      android:text="@string/error_str"/>

            <EditText style="@style/editText"
                      android:layout_marginTop="-3dp"
                      android:inputType="textEmailAddress"
                      android:hint="@string/hint_email"/>

            <Button style="@style/blue_button"
                    android:layout_marginTop="10dp"
                    android:text="@string/recover_pswd"/>

            <TextView style="@style/textview_normal"
                      android:layout_marginTop="15dp"
                      android:layout_marginBottom="5dp"
                      android:text="@string/recovery"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>