<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:orientation="vertical">

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:src="@drawable/logo_dmas"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  style="@style/big_text"
                  android:layout_gravity="center"
                  android:text="@string/contact_phone"
                  android:padding="10dp"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  style="@style/big_text"
                  android:layout_gravity="center"
                  android:padding="10dp"
                  android:text="@string/contact_email"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  style="@style/big_text"
                  android:layout_gravity="center"
                  android:padding="10dp"
                  android:text="@string/copyright"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  style="@style/big_text"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:textColor="@color/blue_dark"
                  android:padding="10dp"
                  android:clickable="true"
                  android:onClick="OpenDeveloperSite"
                  android:layout_marginTop="20dp"
                  android:text="@string/developer"/>

    </LinearLayout>











</RelativeLayout>