<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/divine_mercy_image">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/app_name"
              android:padding="6dp"
              android:gravity="center"
              android:textSize="25sp"
              android:typeface="sans"
              android:background="@color/trans_black"
              android:textColor="@color/white"
              android:layout_centerInParent="true"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_alignParentBottom="true"
                  android:weightSum="100"
                  android:layout_marginBottom="90dp">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_weight="50">

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/heart"/>

    </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="horizontal"
                      android:gravity="center"
                      android:layout_weight="50">

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/earth"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
            android:id="@+id/Volver"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@color/trans_white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:weightSum="100"
                      android:gravity="center"
                      android:orientation="horizontal">

            <Button android:layout_width="wrap_content"
                    android:layout_weight="45"
                    android:text="@string/signUp"
                    android:onClick="navSignup"
                    android:layout_marginRight="4dp"
                    style="@style/red_button"/>

            <Button android:layout_width="wrap_content"
                    android:layout_weight="45"
                    android:text="@string/login"
                    android:onClick="navLogin"
                    android:layout_marginLeft="4dp"
                    style="@style/blue_button"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

